--- a/redwoods.html
+++ b/redwoods.html
@@ -34,38 +34,19 @@
       </nav>
    </header>
    <article>
-      <h1>Red Woods National Park</h1>
-      <blockquote>
-         <p>The culinary art of the food truck vendor has been steadily 
-            improving over the last 10 years with fine offerings from 
-            Antonio's Italian, Organic on the Road, and now Curbside Thai. 
-            Sajja Adulet is to be congratulated for offering delicious 
-            and authentic Thai food at a reasonable price. We think 
-            Curbside Thai provides the finest Asian food on or off 
-            the streets of Charlotte.</p>
-         <p>Carolina Traveler</p>
-      </blockquote>
-      <blockquote>
-         <p>Steaming rice with a spicy Asian sauce is common street fare 
-            and we all accept its limitations in exchange for the 
-            convenience of a quick bite on the run. With Curbside Thai you 
-            don't have to compromise. Building on his experience as a 
-            master chef at several fine establishments on the East Coast, 
-            Sajja Adulet has brought the taste of fine dining to the 
-            Food Cart Wars and we couldn't be happier.</p>
-         <p>Food Cart Review</p>
-      </blockquote>
-      <blockquote>
-         <p>Best in Show (Asian)</p>
-         <p>Food Cart Cook-off</p>
-      </blockquote>
-      <blockquote>
-         <p>First Prize (Vendor)</p>
-         <p>Vendy Awards</p>
-      </blockquote>
+      <h1>Redwood National Park</h1>
+      <p><strong>Redwood National Park,</strong> established in 1968, Redwood National Park is located in northernmost coastal California, 
+                and is home to old-growth coast redwoods. These magnificent trees can live to be 2,000 years 
+                old and grow to over 300 feet tall. Spruce, hemlock, Douglas-fir, berry bushes, and sword ferns 
+                create a multiple-canopied understory.</p>
+      <p>To Learn More About Redwood National Park Please Click <a href="https://www.nps.gov/redw/index.htm" target="blank">Here</a></p> 
+     
    </article>
    <footer>
-      Curbside Thai &#8226; 411 Belde Drive, Charlotte NC &nbsp; 28201 &#8226; 704-555-1151
+     
+      <img src="img/Welcome-to-Redwood-National-Park.jpg" alt=""/>
    </footer>
 </body>
 </html>
+
+
