--- a/big_bend.html
+++ b/big_bend.html
@@ -30,11 +30,13 @@
           to nearly 8,000 feet in the Chisos Mountains,
           Big Bend includes massive canyons, vast desert expanses, forested mountains, and an ever-changing river. 
           Here you can explore one of the last remaining wild corners of the United States.</p>
+      <p>To Learn More About Big Bend Please Click <a href="https://www.nps.gov/bibe/index.htm" target="blank">Here</a></p> 
      
    </article>
    
    <footer>
-       <img src="img/bigbend.jpg" alt=""/>
+       <img src="img/footer_bigbend.jpg" alt=""/>
+       
    </footer>
 </body>
 </html>
