--- a/great_sand_dunes.html
+++ b/great_sand_dunes.html
@@ -29,7 +29,7 @@
          towers 750 feet high. The kid in every visitor loves to sled down the
          sand year-round and plunge into the soft-sand tracks of those who climbed ahead of them
       </p>
-      <p>To Learn More About Yellowstone National Park please click 
+      <p>To Learn More About The Great Sand Dunes Please Click 
           <a href="https://www.nps.gov/grsa/index.htm">Here</a>.
       </p>
    </article>
@@ -41,4 +41,3 @@
     
 </body>
 </html>
-
