--- a/glacier_bay.html
+++ b/glacier_bay.html
@@ -24,7 +24,7 @@
     
    <article>
       <h1>Galcier Bay</h1>
-      <p><strong>Glacier Bay</strong> An area in a constant state of change,
+      <p><strong>Glacier Bay</strong> is an area in a constant state of change,
          Glacier Bay National Park and Preserve allows visitors the chance to
          see some of this planet’s most powerful, and creative, forces at work.
          Encompassing the past, present, and future, this park is a true 
@@ -34,7 +34,7 @@
          the famous glaciers — rugged, high mountain peaks; fjords, inlets, rivers, and streams;
          as well as forests, foothills, plains, and wet tundra compose a symphony of wilderness scenery, making it a unique lifetime experience
       </p>
-      <p>To Learn More About Yellowstone National Park please click 
+      <p>To Learn More About Glacier Bay please click 
           <a href="https://www.nps.gov/glba/index.htm" target="blank">Here</a>.
       </p>
    </article>
