--- a/glacier_bay.html
+++ b/glacier_bay.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>Galcier Bay</title>
+   <title>Galcier Bay National Park</title>
    <link href="css/ct_base.css" rel="stylesheet" />
    <link href="css/ct_layout2.css" rel="stylesheet" />
 </head>
