--- a/glacier_bay.html
+++ b/glacier_bay.html
@@ -23,7 +23,7 @@
    </header>
     
    <article>
-      <h1>Galcier Bay</h1>
+      <h1>Galcier Bay National Park</h1>
       <p><strong>Glacier Bay</strong> is an area in a constant state of change,
          Glacier Bay National Park and Preserve allows visitors the chance to
          see some of this planet’s most powerful, and creative, forces at work.
