--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="glacier_bay.html"><img src="img/glacier_bay.jpg" alt="Glacier Bay" /></a> 
    </nav>
    <footer>
-      Spencer Gros &#8226; Paul Thomas &#8226; Devon Castleberry
+       <p><strong>To Learn More About This Project Click <a href="about.html">Here</a></strong></p>
    </footer>
 </body>
 </html>
