--- a/about.html
+++ b/about.html
@@ -7,24 +7,40 @@
        <meta charset="utf-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1" />
        <link href="css/ct_base.css" rel="stylesheet" />
-       <link href="css/ct_layout1.css" rel="stylesheet" />
+       <link href="css/ct_layout2.css" rel="stylesheet" />
     </head>
     <body>
-        <h1>Purpose of Project</h1>
-        <p>The purpose of this project is to create a web application that is 
-          intended to be functional and purposeful. This application will incorporate 
-          various features that have been covered in class such as text, links, buttons, photos, and color. 
-          We hope that in creation of this web application we learn new features and topics that we can use in the future.</p>
-        <h1>Project Description</h1>
-        <p>The web application will be a home page for various National Parks around the country. 
-            We plan to include a layout page for each park with brief descriptions and links to the park’s official main page. 
-	In order to build this web application we will research about the parks that we choose to include 
-        and then build a series of html files to create the web pages. Ideally, there will be a menu that navigates the user 
-        to each page and on each page there will be pictures of the park with text giving descriptions of the park.</p>
-        <h1>Theoretical Background</h1>
-        <p>For this project, we will use the knowledge gained from class in order to create the web application. 
-            Our goal with the topic of National Parks is to show how Computer Science can bridge the gap between 
+        <header>
+            <a href="index.html"><img src="img/header.png" alt="US National Parks" /></a>
+            <nav>
+                 <ul>
+                    <li><a href="yosemite.html">Yosemite</a></li>
+                    <li><a href="yellowstone.html">Yellowstone</a></li>
+                    <li><a href="big_bend.html">Big Bend</a></li>
+                    <li><a href="redwoods.html">Red Woods</a></li>
+                    <li><a href="great_sand_dunes.html">Great Sand Dunes</a></li>
+                    <li><a href="glacier_bay.html">Glacier Bay</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <article>
+            <h1>Purpose of Project</h1>
+            <p>The purpose of this project was to create a web application that is 
+             intended to be functional and purposeful. This application incorporates 
+             various features that have been covered in class such as text, links, buttons, photos, and color. 
+            </p>
+            <h1>Project Description</h1>
+            <p>The web application is meant to be a home page for various National Parks around the country. 
+            We included a layout page for each park with brief descriptions and links to the parks’ official home page. 
+            In order to build this web application we researched the parks that we choose to include 
+            and then built a series of html files to create the web pages. There is a menu that navigates the user 
+            to each page and on each page there is pictures and descriptions of the park.</p>
+            <h1>Theoretical Background</h1>
+            <p>For this project, we used the knowledge gained from class in order to create the web application. 
+            Our goal with the topic of National Parks was to show how Computer Science can bridge the gap between 
             two very different topics: technology and the outdoors.</p>
+        </article>
     </body>
    <footer>
       Spencer Gros &#8226; Paul Thomas &#8226; Devon Castleberry
